# wl-clip-persist

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: async_io.rs  logger.rs  main.rs  pipe_io.rs  settings.rs  states.rs  wayland.rs
