[package]
name = "wl-clip-persist"
version = "0.1.0"
description = "Keep Wayland clipboard even after programs close"
authors = ["Linus789"]
readme = "README.md"
repository = "https://github.com/Linus789/wl-clip-persist"
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.61.0"

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "3.2.8", features = ["cargo", "derive"] }
filedescriptor = "0.8.2"
libc = "0.2.126"
wayland-protocols = { version = "0.29.4", features = ["client", "unstable_protocols"] }
wayland-client = { version = "0.29.4", features = ["use_system_lib"] }
