[package]
name = "wl-clip-persist"
version = "0.4.1"
description = "Keep Wayland clipboard even after programs close"
authors = ["Linus789"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Linus789/wl-clip-persist"
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.76.0"

[dependencies]
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "regex"] }
chrono = "0.4"
clap = { version = "4.5", features = ["cargo", "derive"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "fs", "io-util", "time"] }
tokio-pipe = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
wayrs-client = { version = "1.1", features = ["tokio"] }
wayrs-protocols = { version = "0.14", features = ["wlr-data-control-unstable-v1"] }
fancy-regex = "0.13"
libc = "0.2"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
